Add build plugins, integration test infrastructure, audio C bridge
sbt AutoPlugins (SgeProject, JvmReleases, BrowserReleases, NativeReleases,
AndroidReleases). Browser IT with Playwright. Android IT with headless
AVD emulator + adb. Replace audio stubs with real miniaudio C bridge
(sge_audio_bridge.c). Wire EGL context management through ANGLE.
Platform ADT for target identification.